# FinTrack.Application/Authentication/SaveRefreshToken/SaveRefreshTokenRequest.cs
@@ -1,0 +1,6 @@
+﻿namespace FinTrack.Application.Authentication.SaveRefreshToken;
+
+public class SaveRefreshTokenRequest
+{
+    public string RefreshToken { get; init; } = null!;
+}
