# FinTrack.Application/Authentication/SaveRefreshToken/SaveRefreshTokenValidator.cs
@@ -1,0 +1,13 @@
+﻿using FinTrack.Application.Utils;
+using FluentValidation;
+
+namespace FinTrack.Application.Authentication.SaveRefreshToken;
+
+public class SaveRefreshTokenValidator: ValidatorBase<SaveRefreshTokenRequest>
+{
+    public SaveRefreshTokenValidator()
+    {
+        RuleFor(x => x.RefreshToken)
+            .NotEmpty();
+    }
+}
